force-app/main/default/objects/SFBD__DunningActivity__c/SFBD__DunningActivity__c.object-meta.xml
<CustomObject>
    <description>Dunning Activities are templates for tasks that will be created on a Collections Plan from a Dunning Method.</description>
    <label>Dunning Activity</label>
    <nameField>
        <label>Dunning Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dunning Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>