force-app/main/default/objects/SFBD__DunningActivity__c/fields/SFBD__ActivitySubject__c.field-meta.xml
<CustomField>
    <fullName>SFBD__ActivitySubject__c</fullName>
    <description>Subject of this Activity. Maps to the Task Subject field when Collections Plans are created from the related Dunning Method.</description>
    <inlineHelpText>Subject of this Activity. Maps to the Task Subject field when Collections Plans are created from the related Dunning Method.</inlineHelpText>
    <label>Activity Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Send Letter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>