force-app/main/default/objects/SFBD__DunningActivity__c/fields/SFBD__DunningMethod__c.field-meta.xml
<CustomField>
    <fullName>SFBD__DunningMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Dunning Method associated with this Dunning Activity</description>
    <inlineHelpText>Dunning Method for this Dunning Activity</inlineHelpText>
    <label>Dunning Method</label>
    <referenceTo>SFBD__DunningMethod__c</referenceTo>
    <relationshipLabel>Dunning Activities</relationshipLabel>
    <relationshipName>Dunning_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>