force-app/main/default/objects/SFBD__DunningActivity__c/fields/SFBD__OffsetDays__c.field-meta.xml
<CustomField>
    <fullName>SFBD__OffsetDays__c</fullName>
    <description>Number of days to offset a task from a Collections Plan start date.</description>
    <inlineHelpText>Number of days to offset a task from a Collections Plan start date.</inlineHelpText>
    <label>Offset Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>