force-app/main/default/objects/SFBD__DunningActivity__c/listViews/SFBD__All.listView-meta.xml
<ListView>
    <fullName>SFBD__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>